<resources>
    <string name="app_name">AplicacionSQLite</string>
    <string name="login">Login</string>
    <string name="title_activity_registro">Registro</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
    <string name="title_activity_perfil_usuario">PerfilUsuario</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="todo">TODO</string>
    <string name="nuevo_contacto">Nuevo contacto</string>
    <string name="agenda">Agenda</string>
</resources>
